--- a/app/src/main/res/layout/form_fragment1.xml
+++ b/app/src/main/res/layout/form_fragment1.xml
@@ -1,86 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#FFF">
 
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
-    <TextView
+    <LinearLayout
+        android:id="@+id/f1DetailsContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="DISCOVER CLINICS AND QUEUE STATUS"
-        android:textSize="18sp"
-        android:padding="8dp"
-        android:layout_marginBottom="16dp"
-        android:maxLines="1"
-        />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:layout_marginLeft="8dp"
-        >
-        <ImageView
-            android:id="@+id/area_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/area_icon"
-            android:layout_centerVertical="true"
-            />
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Select Area/Locality"
-            android:textSize="18sp"
-            android:layout_marginLeft="2dp"
+            android:layout_marginBottom="16dp"
+            android:maxLines="1"
             android:padding="8dp"
-            android:layout_toRightOf="@id/area_icon"
-            android:layout_centerVertical="true"
+            android:text="DISCOVER CLINICS AND QUEUE STATUS"
+            android:textSize="18sp"
+            />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:padding="8dp"
+            >
+
+            <ImageView
+                android:id="@+id/area_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:src="@drawable/area_icon"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="2dp"
+                android:layout_toRightOf="@id/area_icon"
+                android:padding="8dp"
+                android:text="Select Area/Locality"
+                android:textSize="18sp"
+                />
+
+        </RelativeLayout>
+
+        <Spinner
+            android:id="@+id/area_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:padding="8dp"
+            android:popupBackground="#E0F2F1"
+            />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:padding="8dp">
+
+            <ImageView
+                android:id="@+id/clinic_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:src="@drawable/clinic_icon"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="2dp"
+                android:layout_toRightOf="@id/clinic_icon"
+                android:padding="8dp"
+                android:text="Select Clinic/Doctor"
+                android:textSize="18sp"/>
+
+        </RelativeLayout>
+
+        <Spinner
+            android:id="@+id/clinic_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:popupBackground="#E0F2F1"
             />
 
 
-    </RelativeLayout>
+    </LinearLayout>
 
-
-    <Spinner
-        android:id="@+id/area_spinner"
+    <android.support.v7.widget.CardView
+        android:id="@+id/AtnOtnDetCV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:layout_marginBottom="8dp"
-        />
+        android:layout_below="@id/f1DetailsContainer"
+        android:visibility="gone">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:layout_marginLeft="8dp">
-
-        <ImageView
-            android:id="@+id/clinic_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/clinic_icon"
-            android:layout_centerVertical="true"/>
-
-        <TextView
+        <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="Select Clinic/Doctor"
-            android:textSize="18sp"
-            android:layout_marginLeft="2dp"
-            android:layout_toRightOf="@id/clinic_icon"
-            android:padding="8dp"/>
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:stretchColumns="1"
+            >
+            <TableRow
+                android:padding="4dp">
+                <TextView
+                    android:text="Available Token Number"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    />
+                <TextView
+                    android:id="@+id/ATNValue"
+                    android:textSize="14sp"
+                    android:gravity="center"
+                    android:textStyle="bold"/>
+            </TableRow>
+            <TableRow
+                android:padding="4dp">
+                <TextView
+                    android:text="Ongoing Token Number"
+                    android:textSize="14sp"
+                    android:textStyle="bold"/>
+                <TextView
+                    android:id="@+id/OTNValue"
+                    android:textSize="14sp"
+                    android:gravity="center"
+                    android:textStyle="bold"/>
+            </TableRow>
+        </TableLayout>
 
-    </RelativeLayout>
 
-    <Spinner
-        android:id="@+id/clinic_spinner"
-        android:layout_width="match_parent"
+    </android.support.v7.widget.CardView>
+
+    <Button
+        android:id="@+id/f1Next"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
+        android:padding="16dp"
+        android:text="NEXT"
+        android:textSize="18sp"
+        android:textColor="@color/colorAccent"
+        android:background="#FFF"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+
+        />
+    <Button
+        android:id="@+id/f1Back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:text="BACK"
+        android:textSize="18sp"
+        android:textColor="@color/colorAccent"
+        android:background="#FFF"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@id/f1Next"
+
         />
 
-</LinearLayout>
+
+</RelativeLayout>
