--- a/app/src/main/res/layout/form_fragment2.xml
+++ b/app/src/main/res/layout/form_fragment2.xml
@@ -1,142 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="#FFF"
-              android:paddingBottom="8dp">
 
-    <LinearLayout
-        android:id="@+id/f2DetailsContainer"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    android:background="#FFF">
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="16dp">
+        android:layout_height="match_parent"
+        android:paddingBottom="8dp">
 
-        <ScrollView
-            android:id="@+id/form_scrollview"
+        <TextView
+            android:id="@+id/formTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:clickable="true"
-            android:focusable="false"
-            android:focusableInTouchMode="false">
+            android:text="ENTER PATIENT'S DETAIL"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="16sp"/>
 
-            <android.support.v7.widget.LinearLayoutCompat
+
+        <LinearLayout
+            android:id="@+id/f2DetailsContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_below="@id/formTitle"
+            android:orientation="vertical">
+
+            <ScrollView
+                android:id="@+id/form_scrollview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_marginTop="10dp"
+                android:clickable="true"
+                android:focusable="false"
+                android:focusableInTouchMode="false">
 
-                <android.support.v7.widget.AppCompatEditText
-                    android:id="@+id/enterName"
+                <android.support.v7.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:background="@drawable/edittextstyle"
-                    android:gravity="center"
-                    android:hint="Patient's Name"
-                    android:inputType="textNoSuggestions"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    >
+                    android:orientation="vertical">
 
-
-                </android.support.v7.widget.AppCompatEditText>
-
-                <RadioGroup
-                    android:id="@+id/GenderRadioGroup"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="6dp"
-                    android:orientation="horizontal"
-                    >
-
-                    <android.support.v7.widget.AppCompatTextView
-                        android:layout_width="wrap_content"
+                    <android.support.v7.widget.AppCompatEditText
+                        android:id="@+id/enterName"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="4dp"
-                        android:paddingLeft="72dp"
-                        android:text="Gender"
-                        />
+                        android:layout_margin="16dp"
+                        android:background="@drawable/button_shape"
+                        android:gravity="center"
+                        android:hint="Name"
+                        android:inputType="textNoSuggestions"
+                        android:paddingBottom="10dp"
+                        android:paddingTop="10dp"
+                        >
 
-                    <android.support.v7.widget.AppCompatRadioButton
-                        android:id="@+id/MRadioBt"
-                        android:layout_width="wrap_content"
+
+                    </android.support.v7.widget.AppCompatEditText>
+
+                    <RadioGroup
+                        android:id="@+id/GenderRadioGroup"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="4dp"
-                        android:paddingRight="4dp"
-                        android:text="Male"
-                        />
+                        android:layout_margin="6dp"
+                        android:orientation="horizontal"
+                        >
 
-                    <android.support.v7.widget.AppCompatRadioButton
-                        android:id="@+id/FRadioBt"
-                        android:layout_width="wrap_content"
+                        <android.support.v7.widget.AppCompatTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="4dp"
+                            android:paddingLeft="72dp"
+                            android:text="Gender"
+                            />
+
+                        <android.support.v7.widget.AppCompatRadioButton
+                            android:id="@+id/MRadioBt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="4dp"
+                            android:paddingRight="4dp"
+                            android:text="Male"
+                            />
+
+                        <android.support.v7.widget.AppCompatRadioButton
+                            android:id="@+id/FRadioBt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="4dp"
+                            android:paddingRight="4dp"
+                            android:text="Female"
+                            />
+
+                    </RadioGroup>
+
+
+                    <android.support.v7.widget.AppCompatEditText
+                        android:id="@+id/enterContact"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="4dp"
-                        android:paddingRight="4dp"
-                        android:text="Female"
+                        android:layout_margin="16dp"
+                        android:background="@drawable/button_shape"
+                        android:gravity="center"
+                        android:hint="Contact Number"
+                        android:inputType="number"
+                        android:maxLength="10"
                         />
+                </android.support.v7.widget.LinearLayoutCompat>
+            </ScrollView>
+        </LinearLayout>
 
-                </RadioGroup>
+        <Button
+            android:id="@+id/bookBt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/f2DetailsContainer"
+            android:layout_marginRight="16dp"
+            android:background="@color/colorAccent"
+            android:padding="8dp"
+            android:text="Book"
+            android:textColor="#FFF"
+            />
 
+        <Button
+            android:id="@+id/f2backBt"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/f2DetailsContainer"
+            android:layout_marginRight="8dp"
+            android:layout_toLeftOf="@id/bookBt"
+            android:padding="16dp"
+            android:text="BACK"
+            android:textColor="@color/colorAccent"
 
-                <android.support.v7.widget.AppCompatEditText
-                    android:id="@+id/enterContact"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:background="@drawable/edittextstyle"
-                    android:gravity="center"
-                    android:hint="Contact Number"
-                    android:inputType="number"
-                    android:maxLength="10"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp"
-                    />
-            </android.support.v7.widget.LinearLayoutCompat>
-        </ScrollView>
-    </LinearLayout>
+            />
 
-    <Button
-        android:id="@+id/bookBt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/f2DetailsContainer"
-        android:text="Book"
-        android:textSize="16sp"
-        android:textColor="#FFF"
-        android:layout_alignParentRight="true"
-        android:padding="8dp"
-        android:background="@color/colorAccent"
-        android:layout_marginRight="16dp"
-        />
-    <Button
-        android:id="@+id/f2backBt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toLeftOf="@id/bookBt"
-        android:layout_below="@id/f2DetailsContainer"
-        android:text="BACK"
-        android:textSize="16sp"
-        android:textColor="@color/colorAccent"
-        android:background="#FFF"
-        android:padding="16dp"
-        android:layout_marginRight="8dp"
-
-        />
-    <Button
-        android:id="@+id/quitBooking"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CANCEL"
-        android:textSize="16sp"
-        android:textColor="@color/colorAccent"
-        android:background="#FFF"
-        android:layout_below="@id/f2DetailsContainer"
-        android:layout_toLeftOf="@id/f2backBt"
-        android:padding="16dp"
-        android:layout_marginRight="8dp"
+        <Button
+            android:id="@+id/quitBooking"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/f2DetailsContainer"
+            android:layout_marginRight="8dp"
+            android:layout_toLeftOf="@id/f2backBt"
+            android:padding="16dp"
+            android:text="CANCEL"
+            android:textColor="@color/colorAccent"
+            />
 
 
-        />
+    </RelativeLayout>
 
-</RelativeLayout>
+</android.support.v7.widget.CardView>
