--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,11 +10,15 @@
 
     <style name="CustomTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
 
-     <!--   <item name="android:paddingLeft">0dp</item>
-        <item name="android:paddingRight">0dp</item>
-        <item name="android:layout_margin">0dp</item>   -->
+        <!--   <item name="android:paddingLeft">0dp</item>
+           <item name="android:paddingRight">0dp</item>
+           <item name="android:layout_margin">0dp</item>   -->
     </style>
 
-    
+    <style name="FFagmentA" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#FFF</item>
+    </style>
+
 
 </resources>
