performed fragment slide, highlight rv,rv layout

--- a/app/src/main/res/layout/form_fragment1.xml
+++ b/app/src/main/res/layout/form_fragment1.xml
@@ -1,25 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#FFF">
+<com.gaurav.android.queuer.SlideRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                               android:layout_width="match_parent"
+                                               android:layout_height="match_parent"
+                                               android:background="#FFF">
 
     <LinearLayout
         android:id="@+id/f1DetailsContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-       <!-- <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:maxLines="1"
-            android:padding="8dp"
-            android:text="DISCOVER CLINICS AND QUEUE STATUS"
-            android:textSize="18sp"
-            android:textColor="@color/colorPrimaryDark"
-            /> -->
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -172,4 +161,4 @@
         />
 
 
-</RelativeLayout>
+</com.gaurav.android.queuer.SlideRelativeLayout>
