--- a/app/src/main/res/layout/activity_form2.xml
+++ b/app/src/main/res/layout/activity_form2.xml
@@ -13,9 +13,7 @@
 
     <LinearLayout
         android:id="@+id/fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        style="@style/LinearLayout">
     </LinearLayout>
 
 </android.support.v7.widget.LinearLayoutCompat>
