--- a/app/src/main/res/layout/activity_queuer.xml
+++ b/app/src/main/res/layout/activity_queuer.xml
@@ -12,9 +12,8 @@
 
     <LinearLayout
         android:id="@+id/homePageTB"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        style="@style/LinearLayout"
+        android:elevation="4dp">
 
         <include
             android:id="@+id/home_toolbar"
@@ -30,7 +29,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/homePageTB"
-        android:layout_marginTop="16dp"
         android:scrollbars="vertical"
         >
 
