--- a/app/src/main/res/layout/form_fragment1.xml
+++ b/app/src/main/res/layout/form_fragment1.xml
@@ -6,16 +6,10 @@
 
     <LinearLayout
         android:id="@+id/f1DetailsContainer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        style="@style/LinearLayout">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            >
+            style="@style/LinearLayout.RelativeLayout">
 
             <ImageView
                 android:id="@+id/area_icon"
@@ -26,14 +20,9 @@
                 />
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="2dp"
+                style="@style/textview.ff1"
                 android:layout_toRightOf="@id/area_icon"
-                android:padding="8dp"
                 android:text="Select Area/Locality"
-                android:textSize="18sp"
                 />
 
         </RelativeLayout>
@@ -47,12 +36,7 @@
             android:popupBackground="#E0F2F1"
             />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            >
+        <RelativeLayout style="@style/LinearLayout.RelativeLayout">
 
             <ImageView
                 android:id="@+id/clinic_icon"
@@ -62,14 +46,9 @@
                 android:src="@drawable/clinic_icon"/>
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="2dp"
+                style="@style/textview.ff1"
                 android:layout_toRightOf="@id/clinic_icon"
-                android:padding="8dp"
-                android:text="Select Clinic/Doctor"
-                android:textSize="18sp"/>
+                android:text="Select Clinic/Doctor"/>
 
         </RelativeLayout>
 
@@ -86,11 +65,8 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/AtnOtnDetCV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/LinearLayout.RelativeLayout"
         android:layout_below="@id/f1DetailsContainer"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:visibility="gone">
 
         <TableLayout
@@ -100,32 +76,38 @@
             android:layout_marginRight="4dp"
             android:stretchColumns="1"
             >
+
             <TableRow
                 android:padding="4dp">
+
                 <TextView
+                    android:gravity="center"
                     android:text="AVAILABLE TOKEN NUMBER"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="16sp"
-                    android:gravity="center"
                     />
+
                 <TextView
                     android:id="@+id/ATNValue"
-                    android:textSize="16sp"
                     android:gravity="center"
+                    android:textSize="16sp"
                     android:textStyle="bold"/>
             </TableRow>
+
             <TableRow
                 android:padding="4dp">
+
                 <TextView
-                    android:text="ONGOING TOKEN NUMBER"
-                    android:textSize="16sp"
                     android:gravity="center"
+                    android:text="ONGOING TOKEN NUMBER"
                     android:textColor="@color/colorPrimaryDark"
+                    android:textSize="16sp"
                     />
+
                 <TextView
                     android:id="@+id/OTNValue"
-                    android:textSize="16sp"
                     android:gravity="center"
+                    android:textSize="16sp"
                     android:textStyle="bold"/>
             </TableRow>
         </TableLayout>
@@ -135,29 +117,30 @@
 
     <Button
         android:id="@+id/f1Next"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text="NEXT"
-        android:textSize="18sp"
-        android:textColor="@color/colorAccent"
-        android:background="#FFF"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        style="?android:attr/borderlessButtonStyle"
+        android:background="#FFF"
+        android:padding="16dp"
+        android:text="NEXT"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
         />
+
     <Button
         android:id="@+id/f1Back"
+        style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text="BACK"
-        android:textSize="18sp"
-        android:textColor="@color/colorAccent"
-        android:background="#FFF"
         android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@id/f1Next"
-        style="?android:attr/borderlessButtonStyle"
+        android:background="#FFF"
+        android:padding="16dp"
+        android:text="BACK"
+        android:textColor="@color/colorAccent"
+        android:textSize="18sp"
         />
 
 
