--- a/app/src/main/res/layout/spinner_row.xml
+++ b/app/src/main/res/layout/spinner_row.xml
@@ -6,8 +6,7 @@
 
     <TextView
         android:id="@+id/clinicName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/textview"
         android:padding="4dp"
         android:textSize="16sp"
         android:textColor="#000"
@@ -15,8 +14,7 @@
         />
     <TextView
         android:id="@+id/Specializations"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/textview"
         android:paddingRight="4dp"
         android:paddingLeft="4dp"
         android:paddingBottom="4dp"
