--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,16 +8,37 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="CustomTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    <style name="AppThemeCustomTheme">
+        <item name="colorAccent">@color/colorPrimary</item>
 
-        <!--   <item name="android:paddingLeft">0dp</item>
-           <item name="android:paddingRight">0dp</item>
-           <item name="android:layout_margin">0dp</item>   -->
     </style>
 
     <style name="FFagmentA" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">#FFF</item>
+    </style>
+
+    <style name="LinearLayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+
+    <style name="LinearLayout.RelativeLayout">
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginRight">16dp</item>
+    </style>
+
+    <style name="textview">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="textview.ff1">
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:layout_marginLeft">2dp</item>
+        <item name="android:textSize">18sp</item>
     </style>
 
 
